# mkt-making-ccy

./: CONTRIBUTING.md  LICENSE
elecmktvenv/: pyvenv.cfg
mktmakingccy/: CHANGELOG.md  README.md  pyproject.toml
mktmakingccy/docs/: Makefile  conf.py  example.ipynb  make.bat
src/mktmakingccy/: __init__.py  order_book.py  sandbox.ipynb  sandbox_faune.ipynb  sandbox_raph.ipynb  trade.py  utils.py  values.py
tests/: test_mktmakingccy.py
