[tool.poetry]
name = "mktmakingccy"
version = "0.0.0"
description = "Project for Electronic Markets class @ M203"
authors = ["Faune Blanchard & Raphaël Corchia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
